# Evergreen

./: .gitignore  Bitmask.cpp  Bitmask.hpp  CMakeLists.txt  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  MovementComponent.cpp  MovementComponent.hpp  Player.cpp  Player.hpp  README.md  SpriteComponent.cpp  SpriteComponent.hpp  Window.cpp  Window.hpp  main.cpp
Interfaces/: Component.hpp
